--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -62,6 +62,14 @@
   margin-bottom: 20px; 
 }
 
+.plot p {
+  font-size: 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 25px;
+}
+
 .pageComponents {
   display: flex;
   flex-direction: row;
