--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -76,6 +76,31 @@
   width: 100%; 
 }
 
+.inputIssues {
+  margin-top: 1px;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.inputIssues input {
+  width: 200px;
+}
+
+.inputIssues button {
+  margin-top: 22px;
+  height: 37px;
+}
+
+.labelInputIssues {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .issuesContainer {
   display: flex;
   flex-direction: row;
