--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -76,6 +76,13 @@
   width: 100%; 
 }
 
+.pageComponents h2 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
 .buttonContainer {
   display: flex;
   flex-direction: row;
@@ -106,11 +113,36 @@
   height: 37px;
 }
 
+.inputIssues select {
+  margin-top: 6px;
+  margin-left: 30px;
+  height: 37px;
+  width: fit-content;
+}
+
 .labelInputIssues {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.division {
+  border-left: 3px solid black;
+  margin-top: 22px;
+  margin-left: 30px;
+  height: 38px;
+}
+
+.labelSelectIssues {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.labelSelectIssues label{
+  margin-left: 35px;
 }
 
 .issuesContainer {
